--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.HospitalBloom"
         tools:targetApi="31">
         <activity
+            android:name=".activity_registro_pacientes"
+            android:exported="false" />
+        <activity
             android:name=".activity_listado_pacientes"
             android:exported="false" />
         <activity
